# SDIZ_PROJEKT_1

./: CMakeLists.txt  main.cpp  t.txt
Headers/: Array.cpp  Array.h  Array1.cpp  Array1.h  BSTree.cpp  BSTree.h  BinaryHeap.cpp  BinaryHeap.h  CollectionsManager.h  DataHandler.cpp  DataHandler.h  FileParser.cpp  FileParser.h  Menu.cpp  Menu.h  TestingClass.cpp  TestingClass.h  TwoDList.cpp  TwoDList.h
